# precision-medicine-mcp

./: .gitignore  AUTOMATED_PATIENT_REPORTS.md  FUNDING.md  IMPROVEMENT_ANALYSIS.md  LICENSE  README.md  RISK_MATRIX.md  deploy_to_gcp.sh  generate_patient_report.py
.github/: README_REFACTOR_SUMMARY.md
architecture/: README.md
architecture/ai-ml/: README.md
architecture/clinical/: README.md
architecture/genomic/: README.md
architecture/imaging/: HE_WORKFLOW.md  MXIF_WORKFLOW.md  README.md
architecture/multiomics/: README.md
architecture/patient-one/: README.md
architecture/spatial/: DEPLOYMENT.md  README.md  SERVERS.md
architecture/spatial-transcriptomics/: CSV_WORKFLOW.md  DEPLOYMENT.md  FASTQ_WORKFLOW.md  SERVERS.md  TOOL_REFERENCE.md
architecture/workflow/: README.md
configs/: README.md
data/: README.md
docs/: .DOCS_REORGANIZATION.md  CLINICAL_SPATIAL_INTEGRATION.md  COST_ANALYSIS.md  DATA_GOVERNANCE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  EXECUTIVE_SUMMARY.md  INDEX.md  PHASE2_TESTING_GUIDE.md  PRODUCTION_ROADMAP.md  README.md  SERVER_IMPLEMENTATION_STATUS.md  WHY_MCP_FOR_HEALTHCARE.md  email-summary.md
docs/architecture/: README.md  servers.md
docs/archive/: README.md
docs/compliance/: README.md
docs/ethics/: README.md  (+4 more)
implementation/: PHASE1A_GCP_SETUP.md  PHASE1B_EPIC_INTEGRATION.md  PHASE1C_SPATIAL_INTEGRATION.md  PHASE2_ADVANCED_SPATIAL_ANALYSIS.md  QUICK_START.md
infrastructure/: .env.gcp  GET_STARTED.md  setup-gcp-phase1a.sh
manual_testing/: README.md
servers/: README.md
servers/quantum-celltype-fidelity-mcp/: README.md  pyproject.toml
servers/quantum-celltype-fidelity-mcp/src/quantum_celltype_fidelity/: circuits.py  fidelity.py
servers/quantum-celltype-fidelity-mcp/tests/: __init__.py  test_circuits.py
tests/: README.md
(+225 files in other folders)
