[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-celltype-fidelity-mcp"
version = "0.1.0"
description = "MCP server for quantum computing-based cell type fidelity analysis in spatial transcriptomics"
authors = [
    {name = "Precision Medicine MCP Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "fastmcp>=0.1.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "anndata>=0.10.0",
    "fsspec>=2023.1.0",
    "gcsfs>=2023.1.0",
]

[project.urls]
Homepage = "https://github.com/lynnlangit/precision-medicine-mcp"
Issues = "https://github.com/lynnlangit/precision-medicine-mcp/issues"
Documentation = "https://github.com/lynnlangit/precision-medicine-mcp/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]
gpu = [
    "cuquantum-python>=23.3.0",
    "qiskit-aer-gpu>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/quantum_celltype_fidelity --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
